# agent-ram

./: .gitignore  README.md  SPEC.md  pyproject.toml
src/agentram/: __init__.py  cli.py  db.py  git_ops.py  mcp_server.py  search.py
tests/: test_db.py
